adjusted the about and the ideas so the images are responsive and align. need to fix alignment of 'about'

--- a/style.css
+++ b/style.css
@@ -25,13 +25,14 @@ section {
   padding: 20px;
 }
 
+
 section.alternate-background {
   background-color: #00a699;
   color: #fff;
 }
 
 main img {
-  width: 100px;
+  width: 100%;
 }
 
 /* ---  Groups & Items --- */
